  the GUI also with WinUAE CPU core
- Change max allowed VDI resolution from 1280x960 to 1920x1200
- Revert preferred Videl resolution max zooming size setting from
  host desktop resolution back to 832x576 it was in Hatari v1.4,
  so that Falcon/TT emulation window sizes by default are closer
  to ST/STE ones on larger resolution monitors
- Fix to debugger CPU cycle profiling modifying CPU state
- More info to XBios, IKBD, Videl and Crossbar traces
- Fix statusbar assert

Other changes:
- Hatari UI supports file paths with spaces in them and spaces in Hatari
  options given through its control socket can be quoted with '\'.
- Support for alpha-numeric characters in Hconsole "text" command
- Fixes to Hatari UI and hconsole error handling and examples
- TOS tester testing covers more GEMDOS functionality and is fully
  automated 

Fixed Games :
  Hammerfist (fire button),
  Automation 168 - Operation Clean Streets (prefetch in the CPU emulation)
  Impossible Mission II (some versions had the same prefetch issue in the CPU)
  Hades Nebula (fire button)

Fixed demos :
  Built-in Obsolescence (DSP stack overflow)


 Version 1.6.1 (2012-01-13):
 ---------------------------

This version is mainly a bugfix for 1.6.0, where monochrome mode
gave a black screen and was not usable.

Emulation:
- Fixes to bootup issues in monochrome mode
- Better left border removal timings
- DSP external memory access cycles taken into account

Other changes:
- Fix to allow build with Xcode 3.1.3/OS X 10.5.8 PPC
- Several fixes & updates needed to Hatari UI & hconsole
  for them to work correctly with Hatari v1.6.x
- Test programs added for testing TOS booting with different
  HW configurations and for finding out values needed in
  Hatari keymaps

Fixed Demos :
  Vodka Demo - Kill The Beast 2 (left border removal)


 Version 1.6.0 (2012-01-01):
 ---------------------------

The Hatari project has been moved from hatari.berlios.de to
http://hatari.tuxfamily.org/. Please update all bookmarks!