@@ -3461,7 +3461,7 @@ debugger prompt before continuing.
 </p>
 <p>
 Disable tracing with "trace none" when you enter the debugger again.
-"trace help" (or TAB) can be used to list all the (over 30) supported
+"trace help" (or TAB) can be used to list all the (over 40) supported
 traceable things, from HW events to OS functions.
 </p>
 <p>
