@@ -30,6 +30,8 @@ Emulator:
   host desktop resolution back to 832x576 it was in Hatari v1.4,
   so that Falcon/TT emulation window sizes by default are closer
   to ST/STE ones on larger resolution monitors
+- Support for tracing of all symbols loaded to the debugger.
+  This can be used to get CPU and DSP function traces
 - Fix to debugger CPU cycle profiling modifying CPU state
 - More info to XBios, IKBD, Videl and Crossbar traces
 - Fix statusbar assert
